Coverity analysis defect 135075: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Sharding NYC
    • Fully Compatible
    • ALL
    • Sharding NYC 2023-03-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /src/mongo/db/s/analyze_shard_key_cmd_util.cpp:338: UNINIT 135075 Declaring variable "metrics".
      /src/mongo/db/s/analyze_shard_key_cmd_util.cpp:368: UNINIT 135075 Using uninitialized value "metrics". Field "metrics.numDocs" is uninitialized.

            Assignee:
            Cheahuychou Mao
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: