SERVER-73940 Initialize 'numDocs' and 'avgDocSizeBytes' in CollStatsMetrics